@@ -368,3 +368,6 @@ October 17, 2005
   - Add the new browser based GUI to the system.
 October 18, 2005
   - Add fix for defect 188 - grobj files need to specify spectra by name.
+October 21, 2005
+  - Fix error in old tree gui handling of old list mode save files:
+    treeparameter -set was invoked with the wrong number of parameters.
